// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operations selectors  - contact 1`] = `
Immutable.Record {
  "lastSeen": "2019-03-07T13:03:48.000Z",
  "username": "Wenus",
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  "messages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": 0,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is a message with id 0",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
    },
    Immutable.ReceivedMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551956628,
      "message": "This is a message with id 1",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
    },
  ],
  "newMessages": Immutable.List [
    1,
    2,
    3,
    4,
  ],
  "vaultMessages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": 0,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is a message with id 0",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
    },
    Immutable.ReceivedMessage {
      "id": 1,
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551956628,
      "message": "This is a message with id 1",
      "spent": "0.32",
      "isUnregistered": false,
      "tag": "",
      "offerOwner": "",
      "publicKey": null,
    },
  ],
}
`;

exports[`operations selectors  - contacts 1`] = `
Immutable.Map {
  "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya": Immutable.Record {
    "lastSeen": "2019-03-07T13:03:48.000Z",
    "username": "Wenus",
    "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    "messages": Immutable.List [
      Immutable.ReceivedMessage {
        "id": 0,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551963828,
        "message": "This is a message with id 0",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
      },
      Immutable.ReceivedMessage {
        "id": 1,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551956628,
        "message": "This is a message with id 1",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
      },
    ],
    "newMessages": Immutable.List [
      1,
      2,
      3,
      4,
    ],
    "vaultMessages": Immutable.List [
      Immutable.ReceivedMessage {
        "id": 0,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551963828,
        "message": "This is a message with id 0",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
      },
      Immutable.ReceivedMessage {
        "id": 1,
        "type": 1,
        "sender": Immutable.MessageSender {
          "replyTo": "",
          "username": "",
        },
        "createdAt": 1551956628,
        "message": "This is a message with id 1",
        "spent": "0.32",
        "isUnregistered": false,
        "tag": "",
        "offerOwner": "",
        "publicKey": null,
      },
    ],
  },
  "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq": Immutable.Record {
    "lastSeen": null,
    "username": "Mars",
    "address": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
    "messages": Immutable.List [],
    "newMessages": Immutable.List [],
    "vaultMessages": Immutable.List [],
  },
}
`;

exports[`operations selectors  - direct messages 1`] = `
Immutable.List [
  Immutable.DisplayableMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1
This is a message with id 1
This is some message test-pending-message",
    "spent": "0.32",
    "fromYou": true,
    "status": "pending",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": "",
    "isUnregistered": false,
    "publicKey": null,
  },
  Immutable.DisplayableMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0
This is a message with id 0",
    "spent": "0.32",
    "fromYou": true,
    "status": "broadcasted",
    "error": null,
    "shippingData": null,
    "tag": "",
    "offerOwner": "",
    "isUnregistered": false,
    "publicKey": null,
  },
]
`;

exports[`operations selectors  - lastSeen 1`] = `"2019-03-07T13:03:48.000Z"`;

exports[`operations selectors  - messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
  },
  Immutable.ReceivedMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
  },
]
`;

exports[`operations selectors  - newMessages 1`] = `
Immutable.List [
  1,
  2,
  3,
  4,
]
`;

exports[`operations selectors  - pending messages 1`] = `Immutable.Map {}`;

exports[`operations selectors  - queue messages 1`] = `
Immutable.Map {
  "messageHash": Immutable.PendingDirectMessage {
    "recipientAddress": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
    "recipientUsername": "test-recipient-username",
    "offerId": "",
    "message": Immutable.Map {
      "id": "test-pending-message",
      "type": 1,
      "createdAt": 1551956628,
      "message": "This is some message test-pending-message",
      "signature": Object {
        "data": Array [
          125,
          48,
          0,
          208,
          24,
          4,
          145,
          148,
          20,
          58,
          51,
          195,
          92,
          109,
          173,
          90,
          216,
          205,
          238,
          114,
          236,
          220,
          98,
          151,
          54,
          136,
          21,
          232,
          114,
          84,
          38,
          225,
          12,
          47,
          69,
          14,
          21,
          122,
          217,
          230,
          156,
          174,
          99,
          112,
          233,
          199,
          79,
          156,
          18,
          29,
          223,
          61,
          38,
          174,
          58,
          169,
          170,
          87,
          77,
          246,
          158,
          219,
          15,
          48,
        ],
        "type": "Buffer",
      },
    },
  },
}
`;

exports[`operations selectors  - vault messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
  },
  Immutable.ReceivedMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
    "publicKey": null,
  },
]
`;
